--- a/Frontend/src/pages/Registration/Registration.css
+++ b/Frontend/src/pages/Registration/Registration.css
@@ -3,16 +3,28 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 1rem;
+}
+h1 {
+  color: #ffffff;
 }
 .registration-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-
   background-color: #000413;
+  margin: none !important;
 }
 .regristration-inner-container {
   padding-top: 200px;
-  width: 80%;
+  padding-bottom: 100px;
+  width: 40%;
+}
+.registration-card {
+  height: 600px;
+  padding: 32px;
+  background-color: #0f1d38;
+  border-radius: 8px;
 }
 
 form {
@@ -27,6 +39,15 @@ a,
 a:visited {
   color: #fff;
 }
+.registration-subtext {
+  color: #ffffff;
+}
+.label {
+  margin-bottom: 8px;
+}
+.registration-button-container {
+  margin-top: 32px;
+}
 
 input[type="text"],
 input[type="password"],
@@ -39,13 +60,15 @@ textarea {
 
 label,
 .instructions {
-  font-size: 0.75rem;
-  border-radius: 0.5rem;
-  background: #000;
+  font-size: 14px;
+  border-radius: 8px;
   color: #fff;
   padding: 0.25rem;
   position: relative;
   bottom: -10px;
+}
+.instructions {
+  color: #cb0000;
 }
 
 .instructions > svg {
