--- a/Frontend/src/components/AddLostItem/LostItemCard.css
+++ b/Frontend/src/components/AddLostItem/LostItemCard.css
@@ -5,12 +5,17 @@
   flex-direction: column;
   border-radius: 8px;
   width: 50%;
-  height: 60vh;
+  height: 72vh;
   padding: 24px;
   background-color: #063a68;
 }
+
 .add-lost-item-header {
   color: #ffffff;
   font-size: 24px;
   margin-bottom: 32px;
+}
+
+.update-query-form-button {
+  width: 100%;
 }
