--- a/Frontend/src/components/AddLostItem/LostItemInput/LostItemInput.css
+++ b/Frontend/src/components/AddLostItem/LostItemInput/LostItemInput.css
@@ -6,13 +6,15 @@
   width: 100%;
   margin-bottom: 16px;
 }
+
 .lost-item-form-input {
   border-radius: 8px;
+  padding: 4px;
   border: none;
-  text-align: center;
   height: 30px;
   width: 100%;
 }
+
 .lost-item-form-label {
   color: #ffffff;
   margin-bottom: 4px;
