--- a/Frontend/src/pages/AddLostItem/AddLostItem.css
+++ b/Frontend/src/pages/AddLostItem/AddLostItem.css
@@ -6,10 +6,12 @@
   justify-content: center;
   align-items: center;
 }
+
 .add-lost-item-inner-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 200px;
+  padding-top: 175px;
+  padding-bottom: 35px;
   width: 80%;
 }
